Set precompile input and output in DebugOperationTracer and TraceFrame
Signed-off-by: Usman Saleem <usman@usmans.info>